css/style.css
/*Add CSS styles here*/
.axis path,
.axis line {
    fill: none;
    stroke: black;
    stroke-width: 1px;
    shape-rendering: crispEdges;
}

.axis text {
    font-family: sans-serif;
    font-size: 0.9em;
}

.title {
    font-family: sans-serif;
    font-size: 1.5em;
    font-weight: bold;
}

.counties {
    fill: #FFF;
    stroke: #CCC;
    stroke-width: 2px;
}
.state {
    fill: #cdcdcd;
    stroke: #565555;
    stroke-width: 2px;
}

.map {
    border: medium solid #999;
    margin: 10px 0 0 20px;
}

#chart_1 {
    background-color: rgba(128,128,128,.2);
    border: medium solid #999;
    margin: 10px 18px 0 0;
    float: right;
}

#chart_2 {
    background-color: rgba(128,128,128,.2);
    border: medium solid #999;
    margin: 10px 20px 0 0;

}

